<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/c1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:layout_constraintHeight_percent="0.33">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/backbutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

        </de.hdodenhof.circleimageview.CircleImageView>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/personalImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginHorizontal="0.5dp"
            android:layout_marginStart="56dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back"
            app:layout_constraintVertical_bias="0.018"
            tools:ignore="MissingConstraints">

        </de.hdodenhof.circleimageview.CircleImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            android:textColor="@color/purple"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/personalImage"
            app:layout_constraintHorizontal_bias="0.602"
            app:layout_constraintStart_toStartOf="@+id/personalImage"
            app:layout_constraintTop_toBottomOf="@id/personalImage"
            app:layout_constraintBottom_toBottomOf="parent">

        </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/c2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.33"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/c1">

        <ImageView
            android:id="@+id/emailImage"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:contentDescription="@string/myemailaddress"
            app:layout_constraintHeight_percent="0.30"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitXY"
            android:src="@drawable/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="52dp"
            android:text="@string/email"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="@+id/emailImage"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/emailImage"
            app:layout_constraintTop_toTopOf="@id/emailImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.235">

        </TextView>
        <ImageView
            android:id="@+id/ageImage"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/myage"
            app:layout_constraintHeight_percent="0.30"
            android:layout_marginTop="16dp"
            android:scaleType="fitXY"
            android:src="@drawable/age"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailImage" />

        <TextView
            android:id="@+id/ageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="52dp"
            android:text="@string/age"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="@+id/ageImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.234"
            app:layout_constraintStart_toEndOf="@+id/ageImage"
            app:layout_constraintTop_toTopOf="@+id/ageImage"
            app:layout_constraintVertical_bias="0.416">

        </TextView>

        <ImageView
            android:id="@+id/jobImage"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/myjob"
            app:layout_constraintHeight_percent="0.40"
            android:scaleType="fitXY"
            android:src="@drawable/job"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ageImage"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/jobText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="52dp"
            android:text="@string/job"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="@id/jobImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.348"
            app:layout_constraintStart_toEndOf="@+id/jobImage"
            app:layout_constraintTop_toTopOf="@+id/jobImage"
            app:layout_constraintVertical_bias="0.117">

        </TextView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/c3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.34"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/c2"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70sp"
            android:layout_marginTop="36dp"
            android:background="@color/babyPurple"
            android:text="@string/forContactMe"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/in1"
            android:layout_width="115dp"
            android:layout_height="93dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contact"
            app:layout_constraintVertical_bias="1.0" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/github"
            android:layout_width="115dp"
            android:layout_height="93dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/github"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/in1"
            app:layout_constraintTop_toBottomOf="@id/contact"
            app:layout_constraintVertical_bias="0.987" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/facebook"
            android:layout_width="115dp"
            android:layout_height="93dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/github"
            app:layout_constraintTop_toBottomOf="@id/contact"
            app:layout_constraintVertical_bias="0.987" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>